# membraneSphere

./: .gitignore  AUTHORS  CITATION.cff  INSTALL  LICENSE  LICENSE.txt  Makefile  Makefile.in  README  README.md  configure  configure.ac
data/phasedata/: L150.crust.2degree.3.pcn.blk  L150.crust.2degree.gsh  wei_sum.02.R0040.1.txt
data/phasedata/TrampertWoodhouse/gji95/: Readme.md  model.l100.abs.gsh  model.l150.abs.gsh  model.l40.abs.gsh  model.l60.abs.gsh  model.l80.abs.gsh  model.r100.abs.gsh  model.r150.abs.gsh  model.r40.abs.gsh  model.r60.abs.gsh  model.r80.abs.gsh
data/phasedata/TrampertWoodhouse/grl96/: Readme.md  model.l100.abs.gsh  model.l150.abs.gsh  model.l40.abs.gsh  model.l60.abs.gsh  model.l80.abs.gsh  model.r100.abs.gsh  model.r150.abs.gsh  model.r40.abs.gsh  model.r60.abs.gsh  model.r80.abs.gsh
doc/user_manual/: compile_LaTeX_manual.sh  user_manual.tex
doc/user_manual/fncychap/: readme.txt
examples/Love_waves_150s/: Parameter_Input  README.md  Timelag_Input  create_benchmark_data_with_heterogeneousPhaseshift.sh  run_this_example.sh
examples/Love_waves_150s/REF_OUT/: output_propagation.het.txt  output_propagation.hom.txt  output_timelag.txt
examples/Love_waves_150s_4th_orbit/: Parameter_Input  README.md  Timelag_Input  run_this_example.sh
examples/Love_waves_150s_4th_orbit/REF_OUT/: output_propagation.het.txt  output_propagation.hom.txt  output_timelag.txt
examples/Rayleigh_waves_80s_kernel/: Parameter_Input  README.md  run_this_example.sh
examples/Rayleigh_waves_80s_kernel/REF_OUT/: output_adjointMethod.txt
examples/grid_construction/: README.md  plot_3Dgrid.sh  plot_3Dgrid_cellFractionAverage.sh  plot_3Dgrid_harmonics.sh  plot_3Dgrid_numericalError.sh  run_grid_Laplacian_numericalError.sh  run_grid_construction.sh  run_grid_statistics.sh
scripts/: compare_seismogram_correlations.py  gmtplot_2Dkernel.sh  gmtplot_3Dkernel.sh  gmtplot_phaseMap.sh  gmtplot_phasedata.sh  gmtplot_stations.sh  gnuplotSimulation.py  interpolateKernel.sh  parametersearch.py  plot_3Dgrid.py  seis.L150.1.cpt  seis.L150.3.cpt  sortLatitudes.py
src/auxiliaries/: Makefile  sphericalLaplacian.f90
src/grid/: Makefile  gridAreaStatistics.f90  gridConstruction.f90
src/include/: Makefile  adjointRoutines.f90  analyticSolutions.f90  cellfunctions.f90  commonModules.f90  constants.h.in  correlationRoutines.f90  drspln.f  filterRoutines.f90  forcingTerms.f90  gridfunctions.f90  initialize.f90  kernelValue.f90  numericLaplacian.f90  numericalRecipes77_fft.f90  numericalRecipes_correl.f90  numericalRecipes_nr.f90  numericalRecipes_splines.f90  phasemapRoutines.f90  phaseshiftRoutines.f90  propagationRoutines.f90  readData.f90  readParameters.f90  readPhaseMap.f90  readPrecalculated.f90  signalModule.f90  signalhandler.c  spherical.h  sphericalHarmonics.f90  splineRoutines.f90  syncRoutines.f90  timelagRoutines.f90  vectorfunctions.f90
src/propagation/: Makefile  Parameter_Input  Timelag_Input  adjointMethod.f90  heterogeneousPhaseshift.f90  propagation.f90  timelag.f90
src/propagation/scripts/: gmtplot_phasedata.sh  gmtplot_stations.sh  gnuplotSimulation.py  interpolateKernel.sh  seis.L150.4.cpt  seis.L150.diff1.cpt  xyz2latlon_simulation.py
